# cardgetter

./: Cargo.toml  build.rs
data/: config.toml
data/assets/windows/: cardgetter.rc
src/: main.rs
